--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "no-yelling",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "Sets all text in Canvas to sentence case.",
   "author": "cking",
   "license": "MIT",
@@ -29,12 +29,16 @@
     "@gera2ld/plaid": "~2.5.6",
     "@gera2ld/plaid-rollup": "~2.5.6",
     "@rollup/plugin-node-resolve": "^15.0.2",
+    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.7",
     "@violentmonkey/types": "^0.1.4",
     "del-cli": "^5.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "prettier": "^2.7.1",
-    "rollup-plugin-userscript": "^0.1.1"
+    "rollup-plugin-userscript": "^0.1.1",
+    "semantic-release": "^21.0.1"
   }
 }
