--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - master
+permissions:
+  contents: write
+  issues: write
 jobs:
   release:
     name: Release
@@ -18,6 +21,8 @@ jobs:
           node-version: '20.x'
       - name: Install dependencies
         run: npm ci
+      - name: Build Test
+        run: npm run build
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
